samples/_failures_safe/1761425222_4b945f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_527fa34f.c: In function ‘main’:
./samples/SAFE/__tmp_527fa34f.c:126:20: error: missing terminating " character
  126 |             printf("Invalid log format: %
      |                    ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_527fa34f.c:126:13: error: expected expression at end of input
  126 |             printf("Invalid log format: %
      |             ^~~~~~
./samples/SAFE/__tmp_527fa34f.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_527fa34f.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_527fa34f.c:126:13: error: expected declaration or statement at end of input
